Fixed custom scrollbar on searched page

--- a/Azimuth/Content/Site.css
+++ b/Azimuth/Content/Site.css
@@ -174,6 +174,10 @@ div.tableRow{
     height: 100%;
 }
 
+#searched-list > .vkMusicTable {
+    height: 55%;
+}
+
 .table-header {
     position: relative;
     float: none;
